using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace GameTracker.Models
{
    public class People
    {
        public long PeopleId { get; set; }
        public string FirstName { get; set; }
        public string LastName { get; set; }
    }
}
