using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace GameTracker.Models
{
    public class Platform
    {
        public long PlatformId { get; set; }
        public string Name { get; set; }
    }
}
